syntax = "proto3";

package ledger;

option go_package = "ledger";

import "ledger/transaction.proto";

service Ledger {
    rpc Register (RegisterRequest) returns (RegisterResult) {
    }
    rpc GetLastTransaction (GetLastTransactionRequest) returns (GetLastTransactionResult) {
    }
    rpc GetTransaction (GetTransactionRequest) returns (GetTransactionResult) {
    }
    rpc VerifyTransaction (VerifyTransactionRequest) returns (VerifyTransactionResult) {
    }
    rpc Verify (VerifyRequest) returns (VerifyResult) {
    }
    rpc GetAddressStatement (GetAddressStatementRequest) returns (GetAddressStatementResult) {
    }
}

message RegisterRequest {
    Transaction sendTx = 1;
    Transaction receiveTx = 2;
}

message RegisterResult {

}

message GetLastTransactionRequest {
    string address = 1;
}

message GetLastTransactionResult {
    Transaction tx = 1;
}

message GetTransactionRequest {
    string hash = 1;
}

message GetTransactionResult {
    Transaction tx = 1;
}

message VerifyTransactionRequest {
    Transaction tx = 1;
}

message VerifyTransactionResult {

}

message VerifyRequest {
    Transaction sendTx = 1;
    Transaction receiveTx = 2;
}

message VerifyResult {

}

message GetAddressStatementRequest {
    string address = 1;
}

message GetAddressStatementResult {
    repeated Transaction txs = 1;
}
